# grimoire

./: .envrc  .gitignore  CLAUDE.md  NIX_README.md  README.md  flake.nix  justfile  pyproject.toml
.claude/agents/: grimoire-keeper.md  session-starter.md  study-partner.md  systems-sage.md  testing-sage.md
.claude/commands/: check-in.md  commit-dsa.md  commit-systems.md  design.md  start-session.md  weekly-review.md
.claude/skills/commit-suggest/: SKILL.md
.claude/skills/progress-sprint/: SKILL.md
.claude/skills/progress-today/: SKILL.md
.claude/skills/progress-week/: SKILL.md
.claude/skills/test-problem/: SKILL.md
.github/workflows/: README.md  ci.yml  weekly-progress.yml
.helix/: config.toml  languages.toml
docs/: AGENT_GUIDE.md  CHEATSHEET.md  DAILY_RITUAL.md  DAILY_WORKFLOW.md  GIT_WORKFLOW.md  HYPOTHESIS_GUIDE.md  INTERVIEW_SPRINT.md  NIX_README.md  README.md  SYSTEMS_DESIGN_GUIDE.md
docs/templates/: algorithm.md  cantrip.py  cantrip_topic_template.md  design.py  fundamental.py  structure.md
progress/: README.md
scripts/: README.md  commit-helper.sh  new-cantrip.sh  new-design.sh  new-fundamental.sh  setup-git-workflow.sh  sprint-report.sh  weekly-report.sh
