[project]
name = "grimoire"
version = "0.1.0"
description = "A grimoire of data structures and algorithms"
readme = "README.md"
authors = [
    { name = "Ada", email = "adanoelleyoung@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/runes",
    "packages/cantrips",
]
exclude = []
