[project]
name = "grimoire"
version = "0.1.0"
description = "A grimoire of data structures and algorithms"
readme = "README.md"
authors = [
    { name = "Ada", email = "adanoelleyoung@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.0.0",
]

[tool.uv.workspace]
members = [
    "packages/runes",
    "packages/cantrips",
]
exclude = []
